--- a/hwsc-fe/public/index.html
+++ b/hwsc-fe/public/index.html
@@ -1,15 +1,36 @@
+<!--
+ * @Description: In User Settings Edit
+ * @Author: your name
+ * @Date: 2019-09-23 15:19:03
+ * @LastEditTime: 2019-09-23 15:56:01
+ * @LastEditors: Please set LastEditors
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="pixelScale.js"></script>
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hwsc-fe</title>
+    <title>hwsc-fe33</title>
+    <style>
+
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+      }
+      #app {
+        width: 100%;
+        height: 100%;
+        
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but hwsc-fe doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but xiaomi doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
