--- a/hwsc-fe/public/index.html
+++ b/hwsc-fe/public/index.html
@@ -10,21 +10,15 @@
   <head>
     <meta charset="utf-8">
     <script src="pixelScale.js"></script>
-
+		<link rel="stylesheet" type="text/css" href="./css/reset.css"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hwsc-fe33</title>
     <style>
-
       html, body {
         margin: 0;
         padding: 0;
         width: 100%;
         height: 100%;
-      }
-      #app {
-        width: 100%;
-        height: 100%;
-        
       }
     </style>
   </head>
