--- a/hwsc-fe/public/index.html
+++ b/hwsc-fe/public/index.html
@@ -2,7 +2,7 @@
  * @Description: In User Settings Edit
  * @Author: your name
  * @Date: 2019-09-23 15:19:03
- * @LastEditTime: 2019-09-23 15:56:01
+ * @LastEditTime: 2019-09-23 21:53:09
  * @LastEditors: Please set LastEditors
  -->
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
     <script src="pixelScale.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/reset.css"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hwsc-fe33</title>
+    <title>华为商城（VMALL.COM）_华为手机,荣耀手机,官网正品保障</title>
     <style>
       html, body {
         margin: 0;
