--- a/hwsc-fe/public/index.html
+++ b/hwsc-fe/public/index.html
@@ -2,7 +2,7 @@
  * @Description: In User Settings Edit
  * @Author: your name
  * @Date: 2019-09-23 15:19:03
- * @LastEditTime: 2019-09-23 21:53:09
+ * @LastEditTime: 2019-09-28 16:54:16
  * @LastEditors: Please set LastEditors
  -->
 <!DOCTYPE html>
@@ -12,6 +12,8 @@
     <script src="pixelScale.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/reset.css"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- 用在我的页面里的swiper图片轮播 -->
+     <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.min.js"></script> 
     <title>华为商城（VMALL.COM）_华为手机,荣耀手机,官网正品保障</title>
     <style>
       html, body {
